Additional fix to wrapping of elements likely to contain URLs.

--- a/api/css/style.css
+++ b/api/css/style.css
@@ -74,4 +74,6 @@ dt, dt * {
 }
 a, code, pre {
   overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
 }
